gccida/g0/add_const_value_attribute
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/add_const_value_attribute/src/dwarf2out.c:9116:1: error: must use 'union' tag to refer to type 'real_extract'
real_extract u; // [rsp+10h] [rbp-50h] BYREF 
^
union 
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/add_const_value_attribute/src/dwarf2out.c:9121:1: error: must use 'enum' tag to refer to type 'machine_mode'
machine_mode mode; // [rsp+5Ch] [rbp-4h] 
^
enum 
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/add_const_value_attribute/src/dwarf2out.c:9134:6: error: use of undeclared identifier 'mode_class_0'; did you mean 'mode_class'?
if ( mode_class_0[mode] != MODE_FLOAT ) 
     ^~~~~~~~~~~~
     mode_class
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/add_const_value_attribute/src/machmode.h:52:30: note: 'mode_class' declared here
extern const enum mode_class mode_class[NUM_MACHINE_MODES];
                             ^
3 errors generated.
make: *** [/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/add_const_value_attribute/src/obj/dwarf2out.o] Error 1
